fixed issue detial modal is not showing

--- a/src/main/resources/templates/issue.html
+++ b/src/main/resources/templates/issue.html
@@ -848,6 +848,9 @@
 
 
                             $('#sort').on('click', '.issueDetails', function () {
+
+                                console.log("click on issueDetails ")
+
                                 $('#details').collapse('show');
                                 $('#peoples').collapse('show');
 
