--- a/src/main/resources/templates/issue.html
+++ b/src/main/resources/templates/issue.html
@@ -146,7 +146,7 @@
 
                 </div>
 
-                <div class="tab-pane fade show active row row-cols-1" id="unsolved-issues">
+                <div class="tab-pane fade show row row-cols-1" id="unsolved-issues">
 
                 </div>
 
